Closed Bug 1601980 Opened 6 years ago Closed 5 years ago

ThreadSanitizer: data race [@ mozilla::image::RasterImage::StartDecoding] vs. [@ mozilla::image::RasterImage::OnImageDataAvailable]

Categories

(Core :: Graphics: ImageLib, defect, P3)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox73 --- wontfix
firefox83 --- fixed

People

(Reporter: decoder, Assigned: Gankra)

References

(Blocks 1 open bug)

Details

Attachments

(3 files)

The attached crash information was detected while running CI tests with ThreadSanitizer on mozilla-central revision 6989fcd6bab3.

I've investigated this one a bit and the cause is similar to bug 1601940: There are several bool flags declared as bitfields here:

https://searchfox.org/mozilla-central/rev/ea63a0888d406fae720cf24f4727d87569a8cab5/image/RasterImage.h#397-404

Writing any of these on one thread while reading/writing another of these on a different thread is a race because the compiler optimizes reads/writes of these fields into larger units. This should be harmless as long as we have a read/write race, but it can be very harmful as soon as we have a write/write race (two threads wanting to update different fields).

The race reported here is a read/write race so probably benign but it is very easy to turn this into a real problem (because it is not intuitive that these fields cannot be updated on different threads without synchronization, even when writing different fields).

I'm not sure if we have any code already that could cause a write/write race here. Andrew, what do you think?

General information about TSan reports

Why fix races?

Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.

Rating

If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.

False Positives / Benign Races

Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].

[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf

Suppressing unfixable races

If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.

I feel like I determined this was possible based on analyzing an intermittent somewhere. I remember commenting on that bug at the time.

The priority flag is not set for this bug.
:aosmond, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(aosmond)
Flags: needinfo?(aosmond)
Priority: -- → P3
Assignee: nobody → a.beingessner
Status: NEW → ASSIGNED
Pushed by abeingessner@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/398d4e13c32d Introduce a MOZ_ATOMIC_BITFIELDS macro. r=njn https://hg.mozilla.org/integration/autoland/rev/797df52c36b9 use MOZ_ATOMIC_BITFIELDS in imagelib to avoid races on flags. r=aosmond,decoder
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
Regressions: 1668750
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: