Bug 1601980 - use MOZ_ATOMIC_BITFIELDS in imagelib to avoid races on flags. r=aosmond,decoder

Differential Revision: https://phabricator.services.mozilla.com/D91633